# JamSAT

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  README  README.md  appveyor.yml  sonar-project.properties
aux/: asan.supp.in
doc/: Doxyfile.in  (+3 more)
examples/ipasirclient/: CMakeLists.txt  IpasirClient.cpp
lib/: CMakeLists.txt  README.md
lib/jamsat/: Options.h  Parser.cpp  Parser.h  Timeout.h
lib/libjamfrontend/: CMakeLists.txt  IpasirSolver.cpp  IpasirSolver.h  JamSAT.cpp  ModuleDocumentation.h  Options.cpp  Options.h  Parser.cpp  Parser.h  Timeout.cpp  Timeout.h
lib/libjamsat/: CMakeLists.txt
lib/libjamsat/api/: CMakeLists.txt
lib/libjamsat/api/ipasir/: CMakeLists.txt  JamSatIpasir.cpp  ModuleDocumentation.h
lib/libjamsat/branching/: BranchingHeuristicBase.cpp  BranchingHeuristicBase.h  CMakeLists.txt  ModuleDocumentation.h  VSIDSBranchingHeuristic.h
lib/libjamsat/clausedb/: CMakeLists.txt  Clause.cpp  Clause.h  HeapletClauseDB.h  IterableClauseDB.h  ModuleDocumentation.h
lib/libjamsat/cnfproblem/: CMakeLists.txt  CNFLiteral.cpp  CNFLiteral.h  CNFProblem.cpp  CNFProblem.h  ModuleDocumentation.h
lib/libjamsat/concepts/: CMakeLists.txt  ClauseTraits.h  Dummy.cpp  ModuleDocumentation.h  SolverTypeTraits.h
lib/libjamsat/drivers/: CDCLSatSolver.cpp  CDCLSatSolver.h  CMakeLists.txt  ModuleDocumentation.h
lib/libjamsat/proof/: BinaryDRATEncoder.cpp  BinaryDRATEncoder.h  CMakeLists.txt  DRATCertificate.cpp  DRATCertificate.h  DRUPCertificate.cpp  DRUPCertificate.h  Model.cpp  Model.h  ModuleDocumentation.h
lib/libjamsat/simplification/: CMakeLists.txt  ClauseMinimization.h  FailedLiteralAnalysis.h  LightweightSimplifier.h  ModuleDocumentation.h  ProblemOptimizer.cpp  ProblemOptimizer.h  SSRWithHyperBinaryResolution.h  SimplificationStats.h  SubsumptionChecker.h  UnaryOptimizations.h  VariableElimination.cpp  VariableElimination.h
lib/libjamsat/simplification/deprecated/: FailedLiteralAnalysis.h  LightweightSimplifier.h  SSRWithHyperBinaryResolution.h  SubsumptionChecker.h  VariableElimination.cpp
lib/libjamsat/simplification/optimizers/: CMakeLists.txt  FactCleaner.cpp  FactCleaner.h
lib/libjamsat/solver/: Assignment.cpp  Assignment.h  AssignmentAnalysis.h  CDCLSatSolver.cpp  CDCLSatSolver.h  CMakeLists.txt  ClauseDBReductionPolicies.h  FirstUIPLearning.h  LegacyCDCLSatSolver.h  LiteralBlockDistance.h  ModuleDocumentation.h  Propagation.h  RestartPolicies.cpp  RestartPolicies.h  Statistics.cpp  Statistics.h  Trail.cpp  Trail.h  Watcher.h
lib/libjamsat/utils/: Assert.h  BinaryHeap.h  BoundedMap.h  BoundedStack.h  CMakeLists.txt  Casts.h  Concepts.h  ControlFlow.h  FaultInjector.cpp  FaultInjector.h  FlatteningIterator.h  Logger.cpp  Logger.h  LubySequence.h  ModuleDocumentation.h  OccurrenceMap.h  OverApproximatingSet.h  Printers.h  RangeUtils.h  SimpleMovingAverage.h  StampMap.h  TraitUtils.h  Truth.cpp  Truth.h
src/jamsat/: CMakeLists.txt  JamSAT.cpp  JamSAT.h  Main.cpp  Options.cpp  Options.h  Parser.cpp  Parser.h  Timeout.cpp  Timeout.h
src/libjamsat/: CMakeLists.txt
src/libjamsat/api/ipasir/: CMakeLists.txt  JamSatIpasir.cpp  JamSatIpasir.h
src/libjamsat/branching/: BranchingHeuristicBase.cpp  BranchingHeuristicBase.h  CMakeLists.txt  VSIDSBranchingHeuristic.h
src/libjamsat/clausedb/: CMakeLists.txt  Clause.cpp  Clause.h  HeapClauseDB.h  HeapletClauseDB.h
src/libjamsat/cnfproblem/: CMakeLists.txt  CNFLiteral.cpp  CNFLiteral.h  CNFProblem.cpp  CNFProblem.h
src/libjamsat/concepts/: CMakeLists.txt  ClauseTraits.h  Dummy.cpp  SolverTypeTraits.h  TraitUtils.h
src/libjamsat/proof/: CMakeLists.txt  DRUPCertificate.cpp  DRUPCertificate.h  Model.cpp  Model.h  PlainDRUPCertificate.cpp
src/libjamsat/simplification/: CMakeLists.txt  ClauseMinimization.h  LightweightSimplifier.h  SSRWithHyperBinaryResolution.h  UnaryOptimizations.h
src/libjamsat/solver/: AssignmentAnalysis.h  CDCLSatSolver.h  CMakeLists.txt  Clause.cpp  Clause.h  ClauseDBReduction.h  ClauseDBReductionPolicies.h  ClauseMarkers.h  ClauseMinimization.h  Concepts.h  FirstUIPLearning.h  LiteralBlockDistance.h  Propagation.h  RestartPolicies.cpp  RestartPolicies.h  SolverTypeTraits.h  Statistics.h  Trail.cpp  Trail.h  VariableState.cpp  VariableState.h  Watcher.h
src/libjamsat/utils/: ArrayMap.h  Assert.cpp  Assert.h  BinaryHeap.h  BoundedMap.h  BoundedStack.h  CMakeLists.txt  Casts.h  Concepts.h  ControlFlow.h  FaultInjector.cpp  FaultInjector.h  FlatteningIterator.h  Logger.cpp  Logger.h  LubySequence.h  NestedConstIterator.h  OccurrenceMap.h  OverApproximatingSet.h  Printers.h  SimpleMovingAverage.h  StampMap.h  Truth.cpp  Truth.h
testsrc/: CMakeLists.txt
testsrc/jamsat/: CMakeLists.txt
testsrc/jamsat/acceptance/: CMakeLists.txt
testsrc/jamsat/acceptance/testinputs/: satisfiable.cnf
testsrc/jamsat/ipasirmock/: CMakeLists.txt  IpasirMock.cpp  IpasirMock.h
testsrc/jamsat/unit/: CMakeLists.txt  ProblemParsingTests.cpp
testsrc/libjamfrontend/: CMakeLists.txt
testsrc/libjamfrontend/ipasirmock/: CMakeLists.txt  IpasirMock.cpp  IpasirMock.h
testsrc/libjamfrontend/unit/: CMakeLists.txt  IpasirSolverTests.cpp  OptionsTests.cpp  ProblemParsingTests.cpp
testsrc/libjamsat/: CMakeLists.txt
testsrc/libjamsat/acceptance/: CMakeLists.txt
testsrc/libjamsat/fuzz/: BareCDCLSolverFuzzingTarget.cpp  CMakeLists.txt  CNFProblemFuzz.cpp  CNFProblemFuzzingTarget.cpp  TrivialFuzz.cpp  TrivialFuzzingTarget.cpp
testsrc/libjamsat/integration/: CMakeLists.txt
testsrc/libjamsat/unit/: CMakeLists.txt
testsrc/toolbox/: CMakeLists.txt
testsrc/toolbox/cnfgenerators/: CMakeLists.txt  GateStructure.cpp  GateStructure.h  Rule110.cpp  Rule110.h
testsrc/toolbox/fuzz/: CMakeLists.txt  FuzzDump.cpp  FuzzerEntryPoint.h  FuzzingEntryPoint.h  GenericFuzzAdapter.cpp  LibFuzzerAdapter.cpp
testsrc/toolbox/testutils/: CMakeLists.txt  ClauseUtils.cpp  ClauseUtils.h  Dummy.cpp  GMockMatchers.h  Minisat.cpp  Minisat.h  OnlineDRATChecker.cpp  OnlineDRATChecker.h  RangeUtils.h  TestAssignmentProvider.cpp  TestAssignmentProvider.h  TestReasonProvider.h
(+190 files in other folders)
